--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         </form>
         <div id="controls">
             <p class="time">0:00</p>
+            <span><button id="longButton" class="btn btn-default btn-success" type="submit" onclick="onLongTimer()">Long Break</button></span>
             <button type="button" id="play" class="btn btn-default btn-lg">
                 <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
             </button>
