--- a/index.html
+++ b/index.html
@@ -4,41 +4,43 @@
 <head>
     <meta charset="UTF-8">
     <title>Pomodoro</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/master.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/master.css">
+    <script type="text/javascript" src="script.js"></script>
 </head>
 
 <body>
     <div class="container">
-        <h1>My pomodoro app</h1>
-        <h2>Doing</h2>
+        <h1>My jquery app</h1>
+        <h2>starting</h2>
         <form>
+
             <div class="form-group">
                 <label for="task"></label>
-                <input type="text" id="task" class="form-control">
+                <input id="input"></input>
             </div>
         </form>
         <div id="controls">
-            <p class="time">0:00</p>
-            <button type="button" id="play" class="btn btn-default btn-lg">
-                <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
+            <p id="output">0:00</p>
+            <button type="button" id="startPause" class="btn btn-default btn-lg" onclick="starts()">
+                <span class="glyphicon glyphicon-play" aria-hidden="true" ></span>
             </button>
-            <button type="button" id="pause" class="btn btn-default btn-lg">
+            <button type="button" id="pause" class="btn btn-default btn-lg" onclick="Pause()">
                 <span class="glyphicon glyphicon-pause" aria-hidden="true"></span>
             </button>
-            <button type="button" id="stop" class="btn btn-default btn-lg">
+            <button type="button" class="btn btn-default btn-lg" onclick="reset()">
                 <span class="glyphicon glyphicon-stop" aria-hidden="true"></span>
             </button>
         </div>
-        <h2>Done</h2>
+        <h2>finished</h2>
         <ul id="done" class="list-group">
-            <li class="list-group-item"><s>exemple</s></li>
-            <li class="list-group-item"><s>exemple</s></li>
-            <li class="list-group-item"><s>exemple</s></li>
+            <li class="list-group-item"><s>homework</s></li>
+            <li class="list-group-item"><s>breakfast</s></li>
+            <li class="list-group-item"><s>shower</s></li>
         </ul>
     </div>
-    <script src="js/jquery-2.2.2.min.js"></script>
-    <script src="js/script.js"></script>
+
+    <script type="text/javascript" src="script.js"></script>
 </body>
 
 </html>
